Fix overlap with submit button and input text

--- a/src/components/grid-aware/Footer/SubscriptionBlock/SubscriptionBlock.module.css
+++ b/src/components/grid-aware/Footer/SubscriptionBlock/SubscriptionBlock.module.css
@@ -31,6 +31,7 @@
 
 .subscriptionBlock a {
   padding: 14px 40px;
+  margin-left: 38px;
 }
 
 .subscriptionBlock a:hover {
